force-app/main/default/objects/Student__c/fields/Cara_Access_ID__c.field-meta.xml
<CustomField>
    <fullName>Cara_Access_ID__c</fullName>
    <label>Cara Access ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>