force-app/main/default/objects/Student__c/fields/Cara_Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cara_Program_Start_Date__c</fullName>
    <label>Cara Program Start Date</label>
    <type>Date</type>
</CustomField>