force-app/main/default/objects/Student__c/fields/Conviction__c.field-meta.xml
<CustomField>
    <fullName>Conviction__c</fullName>
    <label>Conviction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>