force-app/main/default/objects/Student__c/fields/Job_Ready__c.field-meta.xml
<CustomField>
    <fullName>Job_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Ready</label>
    <type>Checkbox</type>
</CustomField>