force-app/main/default/objects/Student__c/fields/Obstacle__c.field-meta.xml
<CustomField>
    <fullName>Obstacle__c</fullName>
    <label>Obstacle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>