force-app/main/default/objects/Student__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CWF-CEP</fullName>
            </value>
            <value>
                <fullName>CWF-nonCEP</fullName>
            </value>
            <value>
                <fullName>TCP-CEP</fullName>
            </value>
            <value>
                <fullName>TCP-nonCEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>