force-app/main/default/objects/Student__c/fields/YYYY_MM__c.field-meta.xml
<CustomField>
    <fullName>YYYY_MM__c</fullName>
    <formula>TEXT(Year__c) + &quot;-&quot; + TEXT( Month__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YYYY-MM</label>
    <type>Text</type>
</CustomField>