force-app/main/default/objects/Student__c/recordTypes/Student_Record_Type_CAMS.recordType-meta.xml
<RecordType>
    <fullName>Student_Record_Type_CAMS</fullName>
    <active>true</active>
    <description>Use for Standard Placement (CAMs) Users</description>
    <label>Student Record Type CAMS</label>
</RecordType>