force-app/main/default/objects/Student__c/recordTypes/Student_Record_Type_Community_Ctr.recordType-meta.xml
<RecordType>
    <fullName>Student_Record_Type_Community_Ctr</fullName>
    <active>true</active>
    <description>Use for Placement Community Center Users</description>
    <label>Student Record Type Community Ctr</label>
</RecordType>